Code changes to configure SQL server Sink

--- a/DK.Serilog.Demo/appsettings.json
+++ b/DK.Serilog.Demo/appsettings.json
@@ -9,15 +9,43 @@
     },
     "WriteTo": [
       {
-        "Name": "Seq",
+
+        "Name": "Console",
         "Args": {
-          "ServerUrl": "http://localhost:5000"
+          //"formatter": "DK.Serilog.Demo.Infrastructure.CustomFormatter, DK.Serilog.Demo"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Server=MMD5CG133CF02\\MSSQLSERVER_1;Database=SerilogDemo;Integrated Security=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true,
+          "batchPostingLimit": 100,
+          "period": "0.00:00:10"
         }
       }
+      //,
       //{
-      //  "Name": "Console",
+      //  "Name": "Email",
       //  "Args": {
-      //    "formatter": "DK.Serilog.Demo.Infrastructure.CustomFormatter, DK.Serilog.Demo"
+      //    "ConnectionInfo": {
+      //      "FromEmail": "testSendLogs@localhost.com",
+      //      "ToEmail": "testReceiveLogs@localhost.com",
+      //      "Port": "25",
+      //      "MailServer": "localhost",
+      //      "EnableSsl": false,
+      //      "EmailSubject": "Exception in Dk.Serilog.Demo Application"
+      //    },
+      //    "restrictedToMinimumLevel": "Warning",
+      //    "batchPostingLimit": 1
+      //  }
+      //},
+      //{
+      //  "Name": "Seq",
+      //  "Args": {
+      //    "ServerUrl": "http://localhost:5000",
+      //    "ApiKey": "BMkJ0Qtd0Qs2oYUXO5Jw"
       //  }
       //},
       //{
