Remove the unwanted info

--- a/DK.Serilog.Demo/appsettings.json
+++ b/DK.Serilog.Demo/appsettings.json
@@ -18,7 +18,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=MMD5CG133CF02\\MSSQLSERVER_1;Database=SerilogDemo;Integrated Security=True",
+          "connectionString": "Server=localhost;Database=SerilogDemo;Integrated Security=True",
           "tableName": "Logs",
           "autoCreateSqlTable": true,
           "batchPostingLimit": 100,
@@ -45,7 +45,7 @@
       //  "Name": "Seq",
       //  "Args": {
       //    "ServerUrl": "http://localhost:5000",
-      //    "ApiKey": "BMkJ0Qtd0Qs2oYUXO5Jw"
+      //    "ApiKey": "BMkJ0Qtd0Qxxxxxxxxxxxxxx"
       //  }
       //},
       //{
